--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,55 @@
   publisher={The University of Chicago Press}
 }
 
+@article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
+  author    = {Daniel S. Katz and
+               Sou{-}Cheng T. Choi and
+               Nancy Wilkins{-}Diehr and
+               Neil Chue Hong and
+               Colin C. Venters and
+               James Howison and
+               Frank J. Seinstra and
+               Matthew Jones and
+               Karen Cranston and
+               Thomas L. Clune and
+               Miguel de Val{-}Borro and
+               Richard Littauer},
+  title     = {Report on the Second Workshop on Sustainable Software for Science:
+               Practice and Experiences {(WSSSPE2)}},
+  journal   = {CoRR},
+  volume    = {abs/1507.01715},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1507.01715},
+  archivePrefix = {arXiv},
+  eprint    = {1507.01715},
+  timestamp = {Wed, 07 Jun 2017 14:40:14 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/KatzCWHVHSJCCVL15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@InProceedings{littauer2012visualizing,
+  author    = {Richard Littauer and Rory Turnbull and Alexis Palmer},
+  title     = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
+  booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
+  month     = {April},
+  year      = {2012},
+  address   = {Avignon, France},
+  publisher = {Association for Computational Linguistics},
+  pages     = {4},
+}
+
+
+
+@inproceedings{littauer2013linguistic,
+  title={Linguistic Resources Enhanced with Geospatial Information},
+  author={Littauer, Richard and Villazon-Terrazas, Boris and Moran, Steven},
+  booktitle={Proceedings of the 2nd Workshop on Linked Data in Linguistics (LDL-2013): Representing and linking lexicons, terminologies and other language data},
+  pages={53--58},
+  year={2013}
+}
+
+
 @inproceedings{dyer2013simple,
   title={A simple, fast, and effective reparameterization of {IBM} model 2},
   author={Dyer, Chris and Chahuneau, Victor and Smith, Noah A},
