Encapsulate words to stay capitalized

--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,7 @@
 }
 
 @article{richards2004syntax,
-  title={The syntax of the conjunct and independent orders in Wampanoag},
+  title={The syntax of the conjunct and independent orders in {Wampanoag}},
   author={Richards, Norvin W},
   journal={International Journal of American Linguistics},
   volume={70},
@@ -17,6 +17,14 @@
   year={2004},
   publisher={The University of Chicago Press}
 }
+
+@article{katz2016report,
+  title={Report on the third workshop on sustainable software for science: Practice and experiences ({WSSSPE3})},
+  author={Katz, Daniel S and Choi, Sou-Cheng T and Niemeyer, Kyle E and Hetherington, James and L{\"o}ffler, Frank and Gunter, Dan and Idaszak, Ray and Brandt, Steven R and Miller, Mark A and Gesing, Sandra and others},
+  journal={arXiv preprint arXiv:1602.02296},
+  year={2016}
+}
+
 
 @article{DBLP:journals/corr/KatzCWHVHSJCCVL15,
   author    = {Daniel S. Katz and
@@ -46,8 +54,8 @@
 
 
 @InProceedings{littauer2012visualizing,
+  title     = {Visualising Typological Relationships: Plotting {WALS} with Heat Maps},
   author    = {Richard Littauer and Rory Turnbull and Alexis Palmer},
-  title     = {Visualising Typological Relationships: Plotting WALS with Heat Maps},
   booktitle = {Proceedings of the EACL 2012 Workshop on the Visualization of Linguistic Patterns},
   month     = {April},
   year      = {2012},
@@ -77,7 +85,7 @@
 
 
 @inproceedings{chiarcos2011working,
-  title={Working Group for Open Data in Linguistics: Status Quo and Perspectives.},
+  title={Working Group for Open Data in Linguistics: Status Quo and Perspectives},
   author={Chiarcos, Christian and Hellmann, Sebastian},
   booktitle={OKCon},
   year={2011}
@@ -93,7 +101,7 @@
 
 
 @article{sompel2004resource,
-  title={Resource harvesting within the OAI-PMH framework},
+  title={Resource harvesting within the {OAI-PMH} framework},
   author={Sompel, Herbert van de and Nelson, Michael L and Lagoze, Carl and Warner, Simeon},
   journal={D-Lib Magazine; 2004 [10] 12},
   year={2004},
@@ -111,7 +119,7 @@
 
 
 @inproceedings{mccrae2015one,
-  title={One ontology to bind them all: The META-SHARE OWL ontology for the interoperability of linguistic datasets on the Web},
+  title={One ontology to bind them all: The {META-SHARE OWL} ontology for the interoperability of linguistic datasets on the Web},
   author={McCrae, John P and Labropoulou, Penny and Gracia, Jorge and Villegas, Marta and Rodr{\'\i}guez-Doncel, V{\'\i}ctor and Cimiano, Philipp},
   booktitle={International Semantic Web Conference},
   pages={271--282},
@@ -136,24 +144,24 @@
 }
 
 @book{trudgill1983on,
+title={On dialect: Social and geographical perspectives},
 author={Trudgill, Peter},
 year=1983,
-title={On dialect: Social and geographical perspectives},
 address={Oxford},
 publisher={Blackwell}
 }
 
 @misc{caballero2009data,
+  title={{Choguita Rar\'{a}muri} description and documentation},
   author={Caballero, Gabriela},
   year={2009},
-  title={Choguita Rarámuri description and documentation},
   address={London},
   publisher={SOAS, Endangered Languages Archive},
   note={http://elar.soas.ac.uk/deposit/0056. Last accessed on April 26, 2018.}
 }
 
 @article{caballero2017choguita,
-  title={Choguita Rar{\'a}muri (Tarahumara) language description and documentation: a guide to the deposited collection and associated materials},
+  title={Choguita {R}ar\'{a}muri ({Tarahumara}) language description and documentation: a guide to the deposited collection and associated materials},
   author={Caballero, Gabriela},
   year={2017},
   publisher={University of Hawaii Press},
@@ -173,7 +181,7 @@ publisher={Blackwell}
 
 
 @book{labov2005atlas,
-  title={The atlas of North American English: Phonetics, phonology and sound change},
+  title={The atlas of {North American English}: Phonetics, phonology and sound change},
   author={Labov, William and Ash, Sharon and Boberg, Charles},
   year={2005},
   publisher={Walter de Gruyter}
@@ -181,7 +189,7 @@ publisher={Blackwell}
 
 
 @article{cenerini2017mapping,
-  title={Mapping Dialectal Variation Using the Algonquian Linguistic Atlas},
+  title={Mapping Dialectal Variation Using the {Algonquian} Linguistic Atlas},
   author={Cenerini, Chantale and Junker, Marie-Odile and Rosen, Nicole},
   year={2017},
   journal={Language Documentation \& Conservation},
@@ -212,7 +220,7 @@ publisher={Blackwell}
 
 
 @incollection{hu2012multimedia,
-  title={Multimedia mapping on the Internet using commercial APIs},
+  title={Multimedia mapping on the Internet using commercial {APIs}},
   author={Hu, Shunfu},
   booktitle={Online Maps with APIs and WebServices},
   pages={61--71},
@@ -222,7 +230,7 @@ publisher={Blackwell}
 
 
 @article{hu2018web,
-  title={Web-based Multimedia Mapping for Spatial Analysis and Visualization in the Digital Humanities: a Case Study of Language Documentation in Nepal},
+  title={Web-based Multimedia Mapping for Spatial Analysis and Visualization in the Digital Humanities: a Case Study of Language Documentation in {Nepal}},
   author={Hu, Shunfu and Karna, Brajesh and Hildebrandt, Kristine},
   journal={Journal of Geovisualization and Spatial Analysis},
   volume={2},
@@ -242,7 +250,7 @@ publisher={Blackwell}
 }
 
 @inproceedings{garrette2013real,
-  title={Real-world semi-supervised learning of POS-taggers for low-resource languages},
+  title={Real-world semi-supervised learning of {POS}-taggers for low-resource languages},
   author={Garrette, Dan and Mielens, Jason and Baldridge, Jason},
   booktitle={Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
   volume={1},
@@ -283,7 +291,7 @@ publisher={Blackwell}
 
 
 @article{cushman2013wampum,
-  title={Wampum, Sequoyan, and story: decolonizing the digital archive},
+  title={Wampum, {Sequoyan}, and story: decolonizing the digital archive},
   author={Cushman, Ellen},
   journal={College English},
   volume={76},
@@ -318,20 +326,19 @@ publisher={Blackwell}
 }
 
 @misc{AustinPrinciples2017,
+  title =  {The {Austin} Principles of Data Citation in Linguistics},
   author = {Andrea L. Berez-Kroeker and Helene N. Andreassen and
                   Lauren Gawne and Gary Holton and Susan Smythe Kung
                   and Peter Pulsifer and Lauren B. Collister and {the
                   Data Citation and Attribution in Linguistics Group}
                   and {the Linguistics Data Interest Group}},
-  title =  {The {Austin} Principles of Data Citation in
-                  Linguistics},
   year =  2017,
   note =  {Draft, Version 0.1},
   url =   {http://site.uit.no/linguisticsdatacitation/austinprinciples}
 }
 
 @inproceedings{calzolari2012lre,
-  title={The LRE Map. Harmonising Community Descriptions of Resources.},
+  title={The {LRE Map}. Harmonising Community Descriptions of Resources.},
   author={Calzolari, Nicoletta and Del Gratta, Riccardo and Francopoulo, Gil and Mariani, Joseph and Rubino, Francesco and Russo, Irene and Soria, Claudia},
   booktitle={LREC},
   pages={1084--1089},
@@ -397,7 +404,7 @@ publisher={Blackwell}
 }
 
 @article{izreel2003emergence,
-  title={The emergence of spoken Israeli Hebrew},
+  title={The emergence of spoken {Israeli Hebrew}},
   author={Izreel, Shlomo},
   journal={Corpus Linguistics and Modern Hebrew: Towards the Compilation of the Corpus of Spoken Israeli Hebrew},
   pages={85--104},
@@ -433,7 +440,7 @@ publisher={Blackwell}
 
 
 @article{roberts2006understanding,
-  title={Understanding the motivations, participation, and performance of open source software developers: A longitudinal study of the Apache projects},
+  title={Understanding the motivations, participation, and performance of open source software developers: A longitudinal study of the {Apache} projects},
   author={Roberts, Jeffrey A and Hann, Il-Horn and Slaughter, Sandra A},
   journal={Management science},
   volume={52},
@@ -463,14 +470,14 @@ publisher={Blackwell}
 
 
 @article{finley2011github,
-  title={Github has surpassed sourceforge and google code in popularity},
+  title={{GitHub} has surpassed {Sourceforge} and {Google Code} in popularity},
   author={Finley, Klint},
   journal={ReadWrite, 02-Jun-2011},
   year={2011}
 }
 
 @inproceedings{thung2013network,
-  title={Network structure of social coding in GitHub},
+  title={Network structure of social coding in {GitHub}},
   author={Thung, Ferdian and Bissyande, Tegawende F and Lo, David and Jiang, Lingxiao},
   booktitle={Software maintenance and reengineering (csmr), 2013 17th european conference on},
   pages={323--326},
@@ -524,7 +531,7 @@ publisher={Blackwell}
 
 
 @article{boettiger2015introduction,
-  title={An introduction to Docker for reproducible research},
+  title={An introduction to {Docker} for reproducible research},
   author={Boettiger, Carl},
   journal={ACM SIGOPS Operating Systems Review},
   volume={49},
@@ -547,7 +554,7 @@ publisher={Blackwell}
 }
 
 @article{lewis2010developing,
-  title={Developing ODIN: A multilingual repository of annotated language data for hundreds of the world's languages},
+  title={Developing {ODIN}: A multilingual repository of annotated language data for hundreds of the world's languages},
   author={Lewis, William D and Xia, Fei},
   journal={Literary and Linguistic Computing},
   volume={25},
@@ -565,7 +572,7 @@ publisher={Blackwell}
 }
 
 @article{smith2018journal,
-  title={Journal of Open Source Software (JOSS): design and first-year review},
+  title={Journal of Open Source Software ({JOSS}): design and first-year review},
   author={Smith, Arfon M and Niemeyer, Kyle E and Katz, Daniel S and Barba, Lorena A and Githinji, George and Gymrek, Melissa and Huff, Kathryn D and Madan, Christopher R and Mayes, Abigail Cabunoc and Moerman, Kevin M and others},
   journal={PeerJ Computer Science},
   volume={4},
@@ -588,7 +595,7 @@ publisher={Blackwell}
 }
 
 @article{streiter2006implementing,
-  title={Implementing NLP projects for noncentral languages: instructions for funding bodies, strategies for developers},
+  title={Implementing {NLP} projects for noncentral languages: instructions for funding bodies, strategies for developers},
   author={Streiter, Oliver and Scannell, Kevin P and Stuflesser, Mathias},
   journal={Machine Translation},
   volume={20},
@@ -599,7 +606,7 @@ publisher={Blackwell}
 }
 
 @article{farrar2007gold,
-  title={The GOLD Community of Practice: An infrastructure for linguistic data on the Web},
+  title={The {GOLD} Community of Practice: An infrastructure for linguistic data on the Web},
   author={Farrar, Scott and Lewis, William D},
   journal={Language Resources and Evaluation},
   volume={41},
@@ -631,7 +638,7 @@ publisher={Blackwell}
 
 // Note: This is the reviw of ginsburgh2011many
 @article{doi:10.1080/10848770.2013.804729,
-author = { Anthony   Pym },
+author = {Pym, Anthony},
 title = {How Many Languages Do We Need? The Economics of Linguistic Diversity},
 journal = {The European Legacy},
 volume = {18},
@@ -816,8 +823,8 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @misc{unesco11directory,
+title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
   author = {UNESCO},
-  title = {Directory International cooperation programs for the protection and promotion of languages and linguistic diversity},
   year = {2011},
   note={Accessible at \href{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}{http://www.unesco.org/new/fileadmin/MULTIMEDIA/HQ/CLT/pdf/International\%20cooperation\%20programs.pdf}}
 }
@@ -1013,7 +1020,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{darwish2013arabizi,
-  title={Arabizi detection and conversion to Arabic},
+  title={Arabizi detection and conversion to {Arabic}},
   author={Darwish, Kareem},
   journal={arXiv preprint arXiv:1306.6755},
   year={2013}
@@ -1186,14 +1193,14 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @book{bird2009natural,
-  title={Natural language processing with Python: analyzing text with the natural language toolkit},
+  title={Natural language processing with {Python}: analyzing text with the natural language toolkit},
   author={Bird, Steven and Klein, Ewan and Loper, Edward},
   year={2009},
   publisher={" O'Reilly Media, Inc."}
 }
 
 @article{huang2017linking,
-  title={Linking Basic Lexicon to Shared Ontology for Endangered Languages: A Linked Data Approach Toward Formosan Languages},
+  title={Linking Basic Lexicon to Shared Ontology for Endangered Languages: A Linked Data Approach Toward {Formosan} Languages},
   author={Huang, Chu-Ren and Hsieh, Shu-Kai and Pr{\'e}vot, Laurent and Hsiao, Pei-Yi and Chang, Henry Y},
   journal={Journal of Chinese Linguistics},
   year={2017},
@@ -1231,7 +1238,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{krauwer1998elsnet,
-  title={ELSNET and ELRA: A common past and a common future},
+  title={{ELSNET} and {ELRA}: A common past and a common future},
   author={Krauwer, Steven},
   journal={ELRA Newsletter},
   volume={3},
@@ -1250,7 +1257,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{maegaard2006blark,
-  title={The BLARK concept and BLARK for Arabic},
+  title={The {BLARK} concept and {BLARK} for {Arabic}},
   author={Maegaard, Bente and Krauwer, Steven and Choukri, Khalid and J{\o}rgensen, L},
   booktitle={Proc. LREC},
   pages={773--778},
@@ -1258,28 +1265,28 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{binnenpoorte2002towards,
-  title={Towards a roadmap for human language technologies: Dutch-Flemish experience},
+  title={Towards a roadmap for human language technologies: {Dutch-Flemish} experience},
   author={Binnenpoorte, Diana and Cucchiarini, Catia and D'Halleweyn, Elisabeth and Sturm, Janienke and De Vriend, Folkert},
   booktitle={Proceedings lrec 2002},
   year={2002}
 }
 
 @inproceedings{elenius2008language,
-  title={Language Resources and Tools for Swedish: A Survey.},
+  title={Language Resources and Tools for {Swedish}: A Survey},
   author={Elenius, Kjell and Forsbom, Eva and Megyesi, Be{\'a}ta},
   booktitle={LREC},
   year={2008}
 }
 
 @inproceedings{simov2004language,
-  title={A Language Resources Infrastructure for Bulgarian.},
+  title={A Language Resources Infrastructure for {Bulgarian}},
   author={Simov, Kiril Ivanov and Osenova, Petya and Kolkovska, Sia and Balabanova, Elisaveta and Doikoff, Dimitar},
   booktitle={LREC},
   year={2004}
 }
 
 @article{grover2011south,
-  title={The South African human language technology audit},
+  title={The {South African} human language technology audit},
   author={Grover, Aditi Sharma and Van Huyssteen, Gerhard B and Pretorius, Marthinus W},
   journal={Language resources and evaluation},
   volume={45},
@@ -1290,7 +1297,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{mapelli2003report,
-  title={Report on a (minimal) set of LRs to be made available for as many languages as possible, and map of the actual gaps},
+  title={Report on a (minimal) set of {LRs} to be made available for as many languages as possible, and map of the actual gaps},
   author={Mapelli, Val{\'e}rie and Choukri, Khalid},
   journal={ENABLER Deliverable D},
   volume={5},
@@ -1299,7 +1306,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{krauwer2006strengthening,
-  title={Strengthening the smaller languages in Europe},
+  title={Strengthening the smaller languages in {Europe}},
   author={Krauwer, Steven},
   booktitle={Proc. of 5th Slovenian and 1st International Language Technologies Conference},
   pages={9--10},
@@ -1307,7 +1314,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{gousios2014lean,
-  title={Lean GHTorrent: GitHub data on demand},
+  title={Lean {GHTorrent}: {GitHub} data on demand},
   author={Gousios, Georgios and Vasilescu, Bogdan and Serebrenik, Alexander and Zaidman, Andy},
   booktitle={Proceedings of the 11th working conference on mining software repositories},
   pages={384--387},
@@ -1316,7 +1323,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{gousios2012ghtorrent,
-  title={GHTorrent: GitHub's data from a firehose},
+  title={GHTorrent: {GitHub}'s data from a firehose},
   author={Gousios, Georgios and Spinellis, Diomidis},
   booktitle={Mining software repositories (msr), 2012 9th ieee working conference on},
   pages={12--21},
@@ -1325,7 +1332,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{kalliamvakou2014promises,
-  title={The promises and perils of mining github},
+  title={The promises and perils of mining {GitHub}},
   author={Kalliamvakou, Eirini and Gousios, Georgios and Blincoe, Kelly and Singer, Leif and German, Daniel M and Damian, Daniela},
   booktitle={Proceedings of the 11th working conference on mining software repositories},
   pages={92--101},
@@ -1369,7 +1376,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{kleinberg2017web,
-  title={Web-based text anonymization with Node. js: Introducing NETANOS (Named entity-based Text Anonymization for Open Science)},
+  title={Web-based text anonymization with Node.js: Introducing {NETANOS} (Named entity-based Text Anonymization for Open Science)},
   author={Kleinberg, Bennett and Mozes, Maximilian},
   journal={The Journal of Open Source Software},
   volume={2017},
@@ -1403,7 +1410,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{wittenburg2003dobes,
-  title={The DOBES model of language documentation},
+  title={The {DoBeS} model of language documentation},
   author={Wittenburg, Peter},
   journal={Language Documentation and Description},
   volume={1},
@@ -1412,7 +1419,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @inproceedings{calzolari2010lrec,
-  title={The lrec map of language resources and technologies},
+  title={The {LREC} map of language resources and technologies},
   author={Calzolari, Nicoletta and Soria, Claudia and Del Gratta, Riccardo and Goggi, Sara and Quochi, Valeria and Russo, Irene and Choukri, Khalid and Mariani, Joseph and Piperidis, Stelios},
   booktitle={Proceedings of the Seventh conference on International Language Resources and Evaluation (LREC'10)},
   year={2010}
@@ -1440,14 +1447,14 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @book{everett2009don,
-  title={Don't sleep, there are snakes: Life and language in the Amazonian jungle},
+  title={Don't sleep, there are snakes: Life and language in the {Amazonian} jungle},
   author={Everett, Daniel Leonard},
   year={2009},
   publisher={Profile Books}
 }
 
 @article{paricio2010new,
-  title={New ways to revitalise minority languages: the repercussions of the internet in the case of Aragonese},
+  title={New ways to revitalise minority languages: the repercussions of the internet in the case of {Aragonese}},
   author={Paricio Mart{\'\i}n, Santiago and Mart{\'\i}nez Cort{\'e}s, Juan},
   year={2010},
   journal={Digithum. The humanities in the digital age},
@@ -1457,7 +1464,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{del2015visualising,
-  title={Visualising Italian Language Resources: a Snapshot},
+  title={Visualising {Italian} Language Resources: a Snapshot},
   author={Del Gratta, Riccardo and Frontini, Francesca and Monachini, Monica and Pardelli, Gabriella and Russo, Irene and Bartolini, Roberto and Goggi, Sara and Khan, Fahad and Quochi, Valeria and Soria, Claudia and others},
   journal={CLiC it},
   pages={100},
@@ -1491,7 +1498,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 @incollection{grenoble_2011,
  address  = {Cambridge},
  author  = {Lenore A. Grenoble},
- booktitle = {The Cambridge Handbook of Endangered Languages},
+ booktitle = {The {Cambridge} Handbook of Endangered Languages},
  editor  = {Peter K. Austin and Julia Sallabank},
  pages   = {27-45},
  publisher = {Cambridge University Press},
@@ -1564,7 +1571,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{simons2003open,
-  title={The Open Language Archives Community: An infrastructure for distributed archiving of language resources},
+  title={{The Open Language Archives Community}: An infrastructure for distributed archiving of language resources},
   author={Simons, Gary and Bird, Steven},
   journal={Literary and Linguistic Computing},
   volume={18},
@@ -1575,7 +1582,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 @article{jancewicz2002applied,
-  title={Applied computer technology in Cree and Naskapi language programs},
+  title={Applied computer technology in {Cree} and {Naskapi} language programs},
   author={Jancewicz, Bill and MacKenzie, Marguerite},
   year={2002},
   publisher={University of Hawaii National Foreign Language Resource Center}
