--- a/thesis.tex
+++ b/thesis.tex
@@ -94,7 +94,7 @@
 
 \newpage
 
-
+\thispagestyle{empty}
 \noindent\subsection*{Acknowledgements}
 
 \noindent This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
@@ -111,12 +111,12 @@ Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 
 \newpage
-
+\thispagestyle{empty}
 \listoffigures
 \listoftables
-% % \listoflistings
-% % \thispagestyle{empty}
-% % \newpage
+% \listoflistings % For code; not needed here.
+\thispagestyle{empty}
+\newpage
 
 \setcounter{page}{1}
 
