--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,52 @@
   publisher={The University of Chicago Press}
 }
 
+@article{newman2007copyright,
+  title={Copyright essentials for linguists},
+  author={Newman, Paul},
+  journal={Language Documentation and Conservation},
+  year={2007},
+  publisher={University of Hawai'i Press}
+}
+
+@article{rice2006ethical,
+  title={Ethical issues in linguistic fieldwork: An overview},
+  author={Rice, Keren},
+  journal={Journal of Academic Ethics},
+  volume={4},
+  number={1-4},
+  pages={123--155},
+  year={2006},
+  publisher={Springer}
+}
+
+
+@article{austin2010communities,
+  title={Communities, ethics and rights in language documentation},
+  author={Austin, Peter K},
+  journal={Language documentation and description},
+  volume={7},
+  number={1},
+  pages={34--54},
+  year={2010},
+  publisher={SOAS London}
+}
+
+@article{liberman2000legal,
+  title={Legal, ethical, and policy issues concerning the recording and publication of primary language materials},
+  author={Liberman, Mark},
+  journal={Bird and Simons},
+  year={2000}
+}
+
+
+@misc{lsa2008ethics,
+  title={Linguistic Society of America Ethics Statement},
+  author={Claire Bowern and Lise Dobrin and Penny Eckert and Ted Gibson and Jane Hill and Keith Johnson and Jack Martin and Philip Rubin and Susan Steele and Sara Trechter and Monica Macaulay},
+  publisher={Linguistic Society of America},
+  year={2008}
+}
+
 @article{katz2016report,
   title={Report on the third workshop on sustainable software for science: Practice and experiences ({WSSSPE3})},
   author={Katz, Daniel S and Choi, Sou-Cheng T and Niemeyer, Kyle E and Hetherington, James and L{\"o}ffler, Frank and Gunter, Dan and Idaszak, Ray and Brandt, Steven R and Miller, Mark A and Gesing, Sandra and others},
@@ -280,7 +326,7 @@ publisher={Blackwell}
 
 @article{o2010ethical,
   title={Ethical issues in legacy language resources},
-  author={O’Meara, Carolyn and Good, Jeff},
+  author={O'Meara, Carolyn and Good, Jeff},
   journal={Language \& Communication},
   volume={30},
   number={3},
